--- a/src/components/ddd.css
+++ b/src/components/ddd.css
@@ -6,18 +6,18 @@
   font-size: 1rem;
   align-items: center;
   background-image: linear-gradient(
-    to right bottom,
-    rgba(88, 141, 168, 1),
-    rgba(76, 187, 185, 1)
+    to left bottom,
+    rgba(22, 129, 122, 1),
+    rgba(2, 66, 73, 1)
   );
 }
 .heading {
-  position: absolute;
-  font-size: 1.7rem;
-  top: 3rem;
-  left: 3rem;
-  border-bottom: 0.1rem solid rgba(2, 66, 73, 1);
-  color: #222831;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 2.6rem;
+  padding-top: 1rem;
+  color: #85a392;
 }
 .data-container {
   height: 90vh;
@@ -47,22 +47,22 @@
   height: 25%;
   width: 40%;
   padding: 1.8rem 0;
-  background-color: #8ec6c5;
+  background-color: #85a392;
   color: #222831;
-  border: 1px solid rgba(2, 66, 73, 1);
+  border: 1px solid transparent;
   box-shadow: 0 0.3rem 1rem rgba(0, 0, 0, 0.8);
   border-radius: 0.3rem;
 }
 
 .country-data {
   height: 80%;
-  background-color: #8ec6c5;
+  background-color: #85a392;
   font-size: 1.2rem;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  border: 1px solid rgba(2, 66, 73, 1);
+  border: 1px solid transparent;
   box-shadow: 0 0.3rem 1rem rgba(0, 0, 0, 0.8);
 
   border-radius: 0.3rem;
@@ -71,17 +71,21 @@
 .select-div {
   display: flex;
   flex-direction: column;
-
   height: 12%;
   margin: 1.2rem 1.2rem;
   align-items: center;
   justify-content: space-between;
 }
 .selectoption {
-  background-color: #ececec;
+  background-color: #dddddd;
   border: 0;
   cursor: pointer;
   height: 2rem;
+  text-align: center;
+}
+
+.option- {
+  text-align: center;
 }
 .concon {
   margin-bottom: 1rem;
@@ -104,7 +108,7 @@
 
 /* mm*/
 
-@media only screen and (max-width: 62.5em) {
+@media only screen and (max-width: 64.5em) {
   .global-card {
     width: 70%;
   }
@@ -124,6 +128,7 @@
     flex-direction: column;
     height: 90%;
     width: 90%;
+    padding-left: 3rem;
   }
 
   .global-card {
@@ -137,10 +142,22 @@
     margin-bottom: 2rem;
     padding-bottom: 2rem;
   }
-}
-
-@media only screen and (max-width: 32em) {
   .selectoption {
     width: 100%;
+  }
+}
+
+@media only screen and (max-width: 30em) {
+  .global-card {
+    font-size: 1.2rem;
+    width: 190%;
+  }
+
+  .country-data {
+    font-size: 1rem;
+    width: 100%;
+  }
+  .heading {
+    font-size: 2rem;
   }
 }
